--- a/css/master.css
+++ b/css/master.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   width: 800px;
-  height: 400px;
+  height: 500px;
   position: relative;
   margin: auto;
   background: #FFA38C;
@@ -48,4 +48,36 @@ margin-left: 50px;
   border-radius: 60px;
   padding: 12px;
   margin-right: 10px;
+}
+/* -- Dog pet game css -- */
+.pet {
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.action-buttons {
+position: absolute;
+top: 20%;
+right: 5%;
+}
+.action-buttons button{
+  display: block;
+  background-color: #e66a4e;
+  border: 3px solid white;
+  border-radius: 30px;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  width: 150px;
+}
+.action-buttons button:hover {
+    background-color: #ffc7ba;
+  }
+.pet-stats {
+display: block;
+position: absolute;
+top: 20%;
+left: 5%;
 }
