--- a/css/master.css
+++ b/css/master.css
@@ -2,7 +2,6 @@ body {
   background-image: url(../img/pattern.png);
   font-family: 'Comfortaa', cursive;
 }
-
 .container {
   width: 800px;
   height: 500px;
@@ -56,6 +55,7 @@ margin-left: 50px;
   margin-left: auto;
   margin-right: auto;
 }
+/* -- pet action buttons on the right -- */
 .action-buttons {
 position: absolute;
 top: 20%;
@@ -64,20 +64,64 @@ right: 5%;
 .action-buttons button{
   display: block;
   background-color: #e66a4e;
-  border: 3px solid white;
+  border: 3px solid #fcb7a7;
   border-radius: 30px;
   padding: 10px 15px;
   margin-bottom: 10px;
+  margin-top: 10px;
   cursor: pointer;
   font-size: 18px;
   width: 150px;
 }
 .action-buttons button:hover {
-    background-color: #ffc7ba;
+    background-color: #fcb7a7;
   }
+  /* -- pet's status bars -- */
 .pet-stats {
-display: block;
 position: absolute;
 top: 20%;
 left: 5%;
+font-size: 19px;
+padding: 10px;
+}
+.pet-stats progress {
+  display: block;
+  width: 150px;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+progress {
+  border-radius: 10px;
+  box-shadow: 1px 1px 4px rgba(0,0,0,0.2);
+}
+progress::-webkit-progress-bar {
+  background-color: #e66a4e;
+  border-radius: 10px;
+}
+progress::-webkit-progress-value {
+  background-color: #fcb7a7;
+  border-radius: 10px;
+}
+/* -- speech bubble -- */
+.pet-message {
+  position: relative;
+  font-size: 18px;
+  line-height: 24px;
+  width: 300px;
+  background: white;
+  border-radius: 40px;
+  padding: 24px;
+  text-align: center;
+}
+.bubble:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 24px solid white;
+  border-right: 12px solid transparent;
+  border-top: 12px solid white;
+  border-bottom: 20px solid transparent;
+  left: 32px;
+  bottom: -24px;
 }
