--- a/css/master.css
+++ b/css/master.css
@@ -14,15 +14,16 @@ body {
 .welcome {
 text-align: center;
 margin-left: 50px;
+padding: 10px;
 }
 /* -- instruction box on the left -- */
 .instructions {
   position: absolute;
-  top: 10px;
-  left: 5px;
-  border: solid white 2px;
+  top: 28%;
+  left: 2%;
+  border: solid #ffd6cc 2px;
   width: 140px;
-  height: 300px;
+  height: 250px;
   padding: 10px;
   margin: 10px;
   text-align: center;
@@ -43,12 +44,24 @@ margin-left: 50px;
   left: 250px;
 }
 .img-link {
-  border: solid white 4px;
+  border: solid #ffd6cc 4px;
   border-radius: 60px;
   padding: 12px;
   margin-right: 10px;
 }
 /* -- Dog pet game css -- */
+.pet-intro {
+  width: 800px;
+  position: relative;
+  margin: auto;
+  margin-bottom: 15px;
+  font-size: 26px;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+  background-color: rgba(225, 225, 225, 0.4);
+
+}
 .pet {
   display: block;
   width: 50%;
@@ -64,7 +77,7 @@ right: 5%;
 .action-buttons button{
   display: block;
   background-color: #e66a4e;
-  border: 3px solid #fcb7a7;
+  border: 3px solid #ffd6cc;
   border-radius: 30px;
   padding: 10px 15px;
   margin-bottom: 10px;
@@ -99,7 +112,7 @@ progress::-webkit-progress-bar {
   border-radius: 10px;
 }
 progress::-webkit-progress-value {
-  background-color: #fcb7a7;
+  background-color: #ffd6cc;
   border-radius: 10px;
 }
 /* -- speech bubble -- */
@@ -124,4 +137,17 @@ progress::-webkit-progress-value {
   border-bottom: 20px solid transparent;
   left: 32px;
   bottom: -24px;
+}
+.return-home {
+  position: absolute;
+  right: 5%;
+  bottom: 5%;
+}
+.return-home-button {
+  font-size: 16px;
+  background-color: #e66a4e;
+  width: 200px;
+  border: 3px solid #ffd6cc;
+  border-radius: 30px;
+  padding: 10px 15px;
 }
