--- a/css/master.css
+++ b/css/master.css
@@ -12,9 +12,9 @@ body {
 }
 /* -- welcome text and introduction -- */
 .welcome {
-text-align: center;
-margin-left: 50px;
-padding: 10px;
+  text-align: center;
+  margin-left: 50px;
+  padding: 10px;
 }
 /* -- instruction box on the left -- */
 .instructions {
@@ -36,7 +36,7 @@ padding: 10px;
   font-size: 20px;
   margin-bottom: 40px;
 }
-/* -- choose you pet text and imagelinks -- */
+/* -- choose your pet text and imagelinks -- */
 .choose-pet {
   margin: auto;
   position: absolute;
@@ -49,7 +49,9 @@ padding: 10px;
   padding: 12px;
   margin-right: 10px;
 }
-/* -- Dog pet game css -- */
+/* ------- Pet game css -------- */
+
+/* -- styling for intro text -- */
 .pet-intro {
   width: 800px;
   position: relative;
@@ -60,8 +62,8 @@ padding: 10px;
   text-align: center;
   padding: 5px;
   background-color: rgba(225, 225, 225, 0.4);
-
 }
+/* -- center the pet image -- */
 .pet {
   display: block;
   width: 50%;
@@ -70,9 +72,9 @@ padding: 10px;
 }
 /* -- pet action buttons on the right -- */
 .action-buttons {
-position: absolute;
-top: 20%;
-right: 5%;
+  position: absolute;
+  top: 20%;
+  right: 5%;
 }
 .action-buttons button{
   display: block;
@@ -87,15 +89,15 @@ right: 5%;
   width: 150px;
 }
 .action-buttons button:hover {
-    background-color: #fcb7a7;
+  background-color: #fcb7a7;
   }
   /* -- pet's status bars -- */
 .pet-stats {
-position: absolute;
-top: 20%;
-left: 5%;
-font-size: 19px;
-padding: 10px;
+  position: absolute;
+  top: 20%;
+  left: 5%;
+  font-size: 19px;
+  padding: 10px;
 }
 .pet-stats progress {
   display: block;
@@ -138,6 +140,7 @@ progress::-webkit-progress-value {
   left: 32px;
   bottom: -24px;
 }
+/* -- styling for return home button -- */
 .return-home {
   position: absolute;
   right: 5%;
@@ -170,4 +173,7 @@ progress::-webkit-progress-value {
   border: 3px solid #ffd6cc;
   border-radius: 30px;
   width: 150px;
+}
+.name-input:focus {
+  outline: none;
 }
